Try interactive debugging step?
https://jacobtomlinson.dev/posts/2021/how-to-interactively-debug-github-actions-with-netcat/

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,10 @@ jobs:
         DBBACKEND: sqlite3
         DBNAME: ":memory:"
 
+    - name: Debug with tmate on failure
+      if: ${{ failure() }}
+      uses: mxschmitt/action-tmate@v3
+
     - name: Upload coverage data
       uses: actions/upload-artifact@v3
       with:
@@ -118,6 +122,10 @@ jobs:
         DBUSER: root
         DBPASSWORD: rootpw
         DBHOST: 127.0.0.1
+
+    - name: Debug with tmate on failure
+      if: ${{ failure() }}
+      uses: mxschmitt/action-tmate@v3
 
     - name: Upload coverage data
       uses: actions/upload-artifact@v3
