Remove verbosity from tox

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         python -m pip install --upgrade tox tox-gh-actions
 
     - name: Test with tox
-      run: tox -vvv
+      run: tox
       env:
         DBBACKEND: sqlite3
         DBNAME: ":memory:"
@@ -105,7 +105,7 @@ jobs:
 
     - name: Test with tox - 10.3
       if: ${{ matrix.mariadb-version == '10.3' }}
-      run: tox -vvv --skip-env ".+?-django42-mysql"
+      run: tox --skip-env ".+?-django42-mysql"
       env:
         DBBACKEND: mysql
         DBNAME: test
@@ -115,7 +115,7 @@ jobs:
 
     - name: Test with tox - not 10.3
       if: ${{ matrix.mariadb-version != '10.3' }}
-      run: tox -vvv
+      run: tox
       env:
         DBBACKEND: mysql
         DBNAME: test
