--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
 
 
   sqlite:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       max-parallel: 10
@@ -54,11 +54,9 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install --upgrade tox tox-gh-actions
 
-    - name: sleep
-      run:
-        sleep 10
-
     - name: Test with tox
+      # Sometimes tox fails to build the package correctly and intermittently throws an OSError or BadZipFile error.
+      # Upon retry, it seems to work.
       uses: nick-fields/retry@v2
       id: retry-sqlite
       with:
@@ -70,10 +68,6 @@ jobs:
         DBBACKEND: sqlite3
         DBNAME: ":memory:"
 
-    # - name: Debug with tmate on failure
-    #   if: ${{ failure() }}
-    #   uses: mxschmitt/action-tmate@v3
-
     - name: Upload coverage data
       uses: actions/upload-artifact@v3
       with:
@@ -82,7 +76,7 @@ jobs:
 
 
   mysql:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       max-parallel: 10
@@ -113,11 +107,9 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install --upgrade tox tox-gh-actions
 
-    - name: sleep
-      run:
-        sleep 10
-
     - name: Test with tox
+      # Sometimes tox fails to build the package correctly and intermittently throws an OSError or BadZipFile error.
+      # Upon retry, it seems to work.
       uses: nick-fields/retry@v2
       id: retry-sqlite
       with:
@@ -131,10 +123,6 @@ jobs:
         DBUSER: root
         DBPASSWORD: rootpw
         DBHOST: 127.0.0.1
-
-    # - name: Debug with tmate on failure
-    #   if: ${{ failure() }}
-    #   uses: mxschmitt/action-tmate@v3
 
     - name: Upload coverage data
       uses: actions/upload-artifact@v3
@@ -155,7 +143,6 @@ jobs:
           python-version: "3.10"
 
       - run: python -m pip install --upgrade coverage[toml] django==3.2.16 django-coverage-plugin
-
 
       - name: Download coverage data.
         uses: actions/download-artifact@v3
