--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
-          cache: pip
 
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.0
@@ -41,8 +40,6 @@ jobs:
       max-parallel: 10
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
-    env:
-      PIP_NO_CACHE_DIR: off
 
     steps:
     - uses: actions/checkout@v3.5.2
@@ -58,11 +55,18 @@ jobs:
         python -m pip install --upgrade tox tox-gh-actions
 
     - name: Test with tox
-      run: tox
+      # Sometimes tox fails to build the package correctly and intermittently throws an OSError or BadZipFile error.
+      # Upon retry, it seems to work.
+      uses: nick-fields/retry@v2
+      id: retry-sqlite
+      with:
+        timeout_minutes: 10
+        max_attempts: 3
+        retry_on: error
+        command: tox
       env:
         DBBACKEND: sqlite3
         DBNAME: ":memory:"
-        PIP_NO_CACHE_DIR: off
 
     - name: Upload coverage data
       uses: actions/upload-artifact@v3
@@ -78,7 +82,7 @@ jobs:
       max-parallel: 10
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
-        mariadb-version: ["10.3", "10.5"]
+        mariadb-version: ["10.4"]
 
     services:
       database:
@@ -103,20 +107,16 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install --upgrade tox tox-gh-actions
 
-    - name: Test with tox - 10.3
-      if: ${{ matrix.mariadb-version == '10.3' }}
-      run: tox --skip-env ".+?-django42-mysql"
-      env:
-        DBBACKEND: mysql
-        DBNAME: test
-        DBUSER: root
-        DBPASSWORD: rootpw
-        DBHOST: 127.0.0.1
-        PIP_NO_CACHE_DIR: off
-
-    - name: Test with tox - not 10.3
-      if: ${{ matrix.mariadb-version != '10.3' }}
-      run: tox
+    - name: Test with tox
+      # Sometimes tox fails to build the package correctly and intermittently throws an OSError or BadZipFile error.
+      # Upon retry, it seems to work.
+      uses: nick-fields/retry@v2
+      id: retry-sqlite
+      with:
+        timeout_minutes: 10
+        max_attempts: 3
+        retry_on: error
+        command: tox
       env:
         DBBACKEND: mysql
         DBNAME: test
@@ -143,7 +143,6 @@ jobs:
           python-version: "3.10"
 
       - run: python -m pip install --upgrade coverage[toml] django==3.2.16 django-coverage-plugin
-
 
       - name: Download coverage data.
         uses: actions/download-artifact@v3
