--- a/setup.cfg
+++ b/setup.cfg
@@ -1,27 +1,27 @@
-[metadata]
-name = django-anvil-consortium-manager
-version = attr: anvil_consortium_manager.__version__
-description = A Django app to manage Consortium AnVIL groups, workspaces, and access.
-long_description = file: README.md
-url = https://github.com/UW-GAC/django-anvil-consortium-manager
-author = Adrienne Stilp
-author_email = amstilp@uw.edu
-license = MIT
-classifiers =
-    Environment :: Web Environment
-    Framework :: Django
-    Framework :: Django :: 3.2
-    Intended Audience :: Developers
-    License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
-    Programming Language :: Python
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10
-    Topic :: Internet :: WWW/HTTP
-    Topic :: Internet :: WWW/HTTP :: Dynamic Content
+# [metadata]
+# name = django-anvil-consortium-manager
+# version = attr: anvil_consortium_manager.__version__
+# description = A Django app to manage Consortium AnVIL groups, workspaces, and access.
+# long_description = file: README.md
+# url = https://github.com/UW-GAC/django-anvil-consortium-manager
+# author = Adrienne Stilp
+# author_email = amstilp@uw.edu
+# license = MIT
+# classifiers =
+#     Environment :: Web Environment
+#     Framework :: Django
+#     Framework :: Django :: 3.2
+#     Intended Audience :: Developers
+#     License :: OSI Approved :: MIT License
+#     Operating System :: OS Independent
+#     Programming Language :: Python
+#     Programming Language :: Python :: 3
+#     Programming Language :: Python :: 3 :: Only
+#     Programming Language :: Python :: 3.8
+#     Programming Language :: Python :: 3.9
+#     Programming Language :: Python :: 3.10
+#     Topic :: Internet :: WWW/HTTP
+#     Topic :: Internet :: WWW/HTTP :: Dynamic Content
 
 [options]
 include_package_data = true
