Change required python version to match setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@
 [options]
 include_package_data = true
 packages = find:
-python_requires = >=3.8
+# python_requires = >=3.8
 install_requires =
     Django >= 3.2
     pytz >= 0
