Move package dependencies into pyproject.toml

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,21 +27,21 @@
 include_package_data = true
 packages = find:
 # python_requires = >=3.8
-install_requires =
-    Django >= 3.2
-    pytz >= 0
-    crispy-bootstrap5 >= 0.6
-    django-crispy-forms >= 1.12
-    google-auth >= 2.6
-    fontawesomefree >= 6.1
-    django-autocomplete-light >= 3.9
-    django-filter >= 23.0
-    django-tables2 >= 2.4
-    django-simple-history >= 3.1.1
-    django-extensions >= 3.1.5
-    plotly >= 5.11.0
-    networkx >= 2.8.2
-    numpy >= 1.24
+# install_requires =
+#     Django >= 3.2
+#     pytz >= 0
+#     crispy-bootstrap5 >= 0.6
+#     django-crispy-forms >= 1.12
+#     google-auth >= 2.6
+#     fontawesomefree >= 6.1
+#     django-autocomplete-light >= 3.9
+#     django-filter >= 23.0
+#     django-tables2 >= 2.4
+#     django-simple-history >= 3.1.1
+#     django-extensions >= 3.1.5
+#     plotly >= 5.11.0
+#     networkx >= 2.8.2
+#     numpy >= 1.24
 
 
 [flake8]
