--- a/setup.cfg
+++ b/setup.cfg
@@ -24,8 +24,8 @@
 #     Topic :: Internet :: WWW/HTTP :: Dynamic Content
 
 [options]
-include_package_data = true
-packages = find:
+# include_package_data = true
+# packages = find:
 # python_requires = >=3.8
 # install_requires =
 #     Django >= 3.2
