Clean up warnings when building with setuptools
setuptools gave warnings about submodules that were not declared.
instead of including all those separately, change the way that
pyproject.toml declares how to find packages. As part of this,
remove the docs/_build directory using MANIFEST.in.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include LICENSE
 include README.md
 recursive-include anvil_consortium_manager/templates *
 recursive-include docs *
+prune docs/_build
