--- a/setup.cfg
+++ b/setup.cfg
@@ -63,8 +63,8 @@ exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
 # force_grid_wrap = 0
 # use_parentheses = true
 
-[coverage:run]
-include = anvil_consortium_manager/*
-omit = *migrations*, *tests*
-plugins =
-    django_coverage_plugin
+# [coverage:run]
+# include = anvil_consortium_manager/*
+# omit = *migrations*, *tests*
+# plugins =
+#     django_coverage_plugin
