Add comment explaining why we still have the tox.ini file

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
+# Tox does not yet natively support pyproject.toml, so keep the separate tox.ini file for now.
+# See Github issue: https://github.com/tox-dev/tox/issues/999
 [tox]
 envlist = py{38,39,310,311}-django{32,41,42}-{sqlite,mysql}
 isolated_build = true
