Optionally store environment variables in a .env file
Since virtual environments are defined by hatch, we don't want to
set the environment variable for the service account file directly
in the hatch env definition, since the file is different for every
developer. Instead, modify the example project settings to read the
service account file from a .env file (optionally). This requires
adding the django-environ package to the dev dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,7 +86,7 @@ python_classes = ["!TestWorkspaceDataFactory"]
 path = "anvil_consortium_manager/__init__.py"
 
 [tool.hatch.envs.dev]
-dependencies = ["django-debug-toolbar"]
-
-[tool.hatch.envs.dev.scripts]
-dj = "python manage.py"
+dependencies = [
+    "django-debug-toolbar",
+    "django-environ",
+]
