--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,14 +85,41 @@ python_classes = ["!TestWorkspaceDataFactory"]
 [tool.hatch.version]
 path = "anvil_consortium_manager/__init__.py"
 
-[tool.hatch.envs.dev]
+[tool.hatch.envs.default]
 dependencies = [
+    "Django >= 3.2,<=5.0",
     "django-debug-toolbar",
+    # Process a .env file for environment variables
     "django-environ",
+    # Interactive debugging
+    # "ipdb",
+]
+[tool.hatch.envs.default.scripts]
+dj = "python manage.py {args}"
+test = "hatch run +py=3.8 test:test"
+all = [
+    "hatch run test:test",
 ]
 
 [tool.hatch.envs.test]
-dependencies = ["tox"]
-
-[tool.hatch.envs.dev.test]
-test = "tox"
+dependencies = [
+    "django-debug-toolbar",
+    # Process a .env file for environment variables
+    "django-environ",
+    # For testing migrations
+    "django-test-migrations",  # https://github.com/wemake-services/django-test-migrations
+    # Test coverage
+    "coverage[toml]>=6.5",
+    # Model factories
+    "factory-boy",
+    # Set the system time in tests
+    "freezegun",  # https://github.com/spulec/freezegun
+    "pytest",
+    "pytest-django",
+    # Mocked responses in tests
+    "responses",  # https://github.com/getsentry/responses
+]
+[tool.hatch.envs.test.scripts]
+test = "pytest {args}"
+[[tool.hatch.envs.test.matrix]]
+python = ["3.8", '3.9']
