--- a/.github/workflows/ci_hatch.yml
+++ b/.github/workflows/ci_hatch.yml
@@ -26,4 +26,4 @@ jobs:
         run: pipx install hatch
 
       - name: Run Tests
-        run: hatch run test:run
+        run: hatch run test:test
