--- a/.github/workflows/ci_hatch.yml
+++ b/.github/workflows/ci_hatch.yml
@@ -11,19 +11,22 @@ on:
 
 jobs:
   test:
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.8", "3.11"]
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
-          python-version: |
-            3.8
-            3.11
+          python-version: ${{ matrix.python-version }}
 
       - name: Install hatch
-        run: pipx install hatch
+        run: python -m pip install --upgrade hatch
 
       - name: Run Tests
-        run: hatch run test:test
+        run: hatch run +py=${{ matrix.python-version }} test:test
