--- a/.github/workflows/ci_hatch.yml
+++ b/.github/workflows/ci_hatch.yml
@@ -29,4 +29,42 @@ jobs:
         run: python -m pip install --upgrade hatch
 
       - name: Run Tests
-        run: hatch run +py=${{ matrix.python-version }} test:test
+        run: hatch run +py=${{ matrix.python-version }} test:cov
+
+      - name: Upload coverage data
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-data
+          path: ".coverage.*"
+
+
+  coverage:
+
+
+    name: Check coverage.
+    runs-on: "ubuntu-latest"
+    needs: [test]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install hatch
+        run: python -m pip install --upgrade hatch
+
+      - name: Download coverage data.
+        uses: actions/download-artifact@v3
+        with:
+          name: coverage-data
+
+      - name: Combine coverage & check percentage
+        run: hatch run cov-combine:combine
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
