--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ dependencies = [
 dj = "python manage.py {args}"
 test = "hatch run +py=3.8 test:test {args}"
 cov = [
+    "rm -f .coverage.*",
     "hatch run test:cov",
     "hatch run cov-combine:combine",
     "hatch run cov-combine:html",
@@ -150,14 +151,17 @@ matrix.type.scripts = [
 ]
 
 [tool.hatch.envs.cov-combine]
+skip-install = true
 dependencies = [
     # Coverage for django templates
     "django-coverage-plugin",
+    "Django ~= 4.2",
     "coverage[toml]>=6.5"
 ]
 [tool.hatch.envs.cov-combine.scripts]
 combine = [
     # Clean up old files first.
+    "rm -f .coverage",
     "coverage combine"
 ]
 report = ["coverage report"]
