--- a/.github/workflows/ci_hatch.yml
+++ b/.github/workflows/ci_hatch.yml
@@ -15,6 +15,8 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.11"]
+        django: ["3.2", "4.2"]
+        backend: ["sqlite3", "mysql"]
     runs-on: ubuntu-latest
 
     steps:
@@ -28,8 +30,8 @@ jobs:
       - name: Install hatch
         run: python -m pip install --upgrade hatch
 
-      - name: Run Tests
-        run: hatch run +py=${{ matrix.python-version }} test:cov
+      - name: Run Tests (${{ matrix.python-version }}, ${{ matrix.django-version }}, ${{ matrix.python-backend }})
+        run: hatch run test.py${{ matrix.python-version }}-${{ matrix.django-version }}-${{ matrix.python-backend }}:cov
 
       - name: Upload coverage data
         uses: actions/upload-artifact@v3
