--- a/.github/workflows/ci_hatch.yml
+++ b/.github/workflows/ci_hatch.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Install hatch
         run: python -m pip install --upgrade hatch
 
-      - name: Run Tests (${{ matrix.python-version }}, ${{ matrix.django-version }}, ${{ matrix.python-backend }})
-        run: hatch run test.py${{ matrix.python-version }}-${{ matrix.django-version }}-${{ matrix.python-backend }}:cov
+      - name: Run Tests (${{ matrix.python-version }}, ${{ matrix.django-version }}, ${{ matrix.backend }})
+        run: hatch run test.py${{ matrix.python-version }}-${{ matrix.django-version }}-${{ matrix.backend }}:cov
 
       - name: Upload coverage data
         uses: actions/upload-artifact@v3
