--- a/.github/workflows/ci_hatch.yml
+++ b/.github/workflows/ci_hatch.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.11"]
-        django: ["3.2", "4.2"]
+        django-version: ["3.2", "4.2"]
         backend: ["sqlite3", "mysql"]
     runs-on: ubuntu-latest
 
@@ -30,7 +30,7 @@ jobs:
       - name: Install hatch
         run: python -m pip install --upgrade hatch
 
-      - name: Run Tests (${{ matrix.python-version }}, ${{ matrix.django-version }}, ${{ matrix.backend }})
+      - name: Run Tests (py${{ matrix.python-version }}, dj${{ matrix.django-version }}, ${{ matrix.backend }})
         run: hatch run test.py${{ matrix.python-version }}-${{ matrix.django-version }}-${{ matrix.backend }}:cov
 
       - name: Upload coverage data
