--- a/.github/workflows/ci_hatch.yml
+++ b/.github/workflows/ci_hatch.yml
@@ -19,6 +19,8 @@ jobs:
         django-version: ["3.2", "4.2"]
         backend: ["sqlite3", "mysql"]
     runs-on: ubuntu-latest
+    env:
+      PYTEST_ADDOPTS: "--maxfail=20"  # Stop testing after too many failures.
 
     steps:
       - uses: actions/checkout@v4
