--- a/.github/workflows/ci_hatch.yml
+++ b/.github/workflows/ci_hatch.yml
@@ -22,6 +22,17 @@ jobs:
     env:
       PYTEST_ADDOPTS: "--maxfail=20"  # Stop testing after too many failures.
 
+    services:
+      database:
+        image: mariadb:10.4
+        env:
+          MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: test
+
+        ports:
+          - 3306:3306
+        options: --tmpfs /var/lib/mysql
+
     steps:
       - uses: actions/checkout@v4
 
@@ -32,6 +43,14 @@ jobs:
 
       - name: Install hatch
         run: python -m pip install --upgrade hatch
+
+      - name: Set environment variables for mysql
+        if: ${{ matrix.backend == "mysql" }}
+        run: |
+          echo "DBNAME=test" >> $GITHUB_ENV
+          echo "DBUSER=root" >> $GITHUB_ENV
+          echo "DBPASSWORD=rootpw" >> $GITHUB_ENV
+          echo "DBHOST=127.0.0.1" >> $GITHUB_ENV
 
       - name: Run Tests (py${{ matrix.python-version }}, dj${{ matrix.django-version }}, ${{ matrix.backend }})
         run: hatch run test.py${{ matrix.python-version }}-${{ matrix.django-version }}-${{ matrix.backend }}:cov
