--- a/.github/workflows/ci_hatch.yml
+++ b/.github/workflows/ci_hatch.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         python-version: ["3.8", "3.11"]
         django-version: ["3.2", "4.2"]
-        backend: ["sqlite3", "mysql"]
+        backend: ["sqlite", "mysql"]
     runs-on: ubuntu-latest
     env:
       PYTEST_ADDOPTS: "--maxfail=20"  # Stop testing after too many failures.
