Add precommit and ipdb to default shell

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,9 @@ dependencies = [
     # Process a .env file for environment variables
     "django-environ",
     # Interactive debugging
-    # "ipdb",
+    "ipdb",
+    # Pre-commit hooks
+    "pre-commit",
 ]
 [tool.hatch.envs.default.scripts]
 dj = "python manage.py {args}"
