--- a/.github/workflows/ci_hatch.yml
+++ b/.github/workflows/ci_hatch.yml
@@ -72,10 +72,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.11"
 
       - name: Install hatch
         run: python -m pip install --upgrade hatch
