Remove old CI file
This caused CI to run twice, oops.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,12 @@ on:
     branches: [ "master", "main" ]
     paths-ignore: [ "docs/**" ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
+
   test:
     strategy:
       fail-fast: false
