Fix coverage combine command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,9 +99,8 @@ jobs:
           ls -la .coverage*
 
       - name: Combine coverage data
-        run: |
-          python -m coverage combine
-          python -m coverage xml
+        run: hatch run cov-combine:combine
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
