--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,7 @@ jobs:
         with:
           name: coverage-data-${{ strategy.job-index }}
           path: ".coverage.*"
+          if-no-files-found: error
 
 
   coverage:
