Revert "Add MariaDB 10.5 to CI"
This didn't work, because a python version was not set in the
include. There's probably a better way to do this.
This reverts commit 56fecbfe9d40aacba5eb27a18ceb338a5d725564.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,9 @@ jobs:
         django-version: ["3.2", "4.2"]
         mariadb-version: ["10.4"]
         backend: ["sqlite", "mysql"]
-        include:
-          - mariadb-version: "10.5"
-            backend: "mysql"
+        # include:
+        #   - mariadb-version: "10.4"
+        #     backend: "mysql"
 
     runs-on: ubuntu-latest
     env:
